--- a/src/fr/pages/404.md
+++ b/src/fr/pages/404.md
@@ -3,7 +3,7 @@ title: Pas trouvé
 seo:
   excludeFromSitemap: true
   noIndex: true
-permalink: /404.html
+permalink: /{{ lang }}/404.html
 eleventyExcludeFromCollections: true
 ---
 
