Synced by Front Matter

--- a/src/fr/pages/404.md
+++ b/src/fr/pages/404.md
@@ -9,4 +9,4 @@ eleventyExcludeFromCollections: true
 
 ## Désolé, cette page n'existe pas!
 
-[Essayez de visiter la page d'accueil!](/). Veuillez me faire savoir si vous rencontrez d'autres erreurs: <a :href="'mailto:'.concat(atob('{{ settings.author.email | base64 }}'))" x-data x-text="atob('{{ settings.author.email | base64 }}')" class="email"></a>
+[Essayez de visiter la page d'accueil!](/) Veuillez me faire savoir si vous rencontrez d'autres erreurs: <a :href="'mailto:'.concat(atob('{{ settings.author.email | base64 }}'))" x-data x-text="atob('{{ settings.author.email | base64 }}')" class="email"></a>
