--- a/src/en/pages/404.md
+++ b/src/en/pages/404.md
@@ -9,4 +9,4 @@ eleventyExcludeFromCollections: true
 
 ## Sorry, that page doesn't exist!
 
-[Try visiting the home page!](/). Please let me know if you encounter more errors: <a :href="'mailto:'.concat(atob('{{ settings.author.email | base64 }}'))" x-data x-text="atob('{{ settings.author.email | base64 }}')" class="email"></a>
+[Try visiting the home page!](/) Please let me know if you encounter more errors: <a :href="'mailto:'.concat(atob('{{ settings.author.email | base64 }}'))" x-data x-text="atob('{{ settings.author.email | base64 }}')" class="email"></a>
